--- a/css/styles.css
+++ b/css/styles.css
@@ -168,8 +168,8 @@ body{
   .btn-info{
     display:inline;
   }
-}*/
-/*@media (min-width:900px) {
+}
+@media (min-width:900px) {
   .main-content{
     grid-template-areas: 'm-c-1 m-c-2' 'm-c-1 m-c-3';
   }
