--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ grid-gap:20px;
   background-color: #ddd;
   padding: 30px;
   box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+  max-height:300px;
 }
 
 .footer{
