--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ body{
   line-height: 1.5;
 }
 /*___________________media queries__________________________________*/
-/*@media (min-width:728px) {
+@media (min-width:728px) {
   .main-content{
     grid-template-areas: 'm-c-1 m-c-1' 'm-c-2 m-c-3';
   }
@@ -183,4 +183,4 @@ body{
   .btn-info{
     display:inline;
   }
-}*/
+}
